# dnd-ai

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: docker_build.yml
backend/: BUILD.bazel  Dockerfile  Makefile  requirements.txt  requirements_lock.txt
backend/src/: BUILD.bazel  main.py
backend/src/core/: BUILD.bazel  monster_statblock_schema.py  openai.py
backend/src/database/: BUILD.bazel  firestore.py  models.py
backend/src/handler/: BUILD.bazel  handler.py  openai_handler.py  required.py
backend/src/handler/templates/: privacy_policy.html
backend/src/utils/: BUILD.bazel  http.py
frontend/dnd-ai/: README.md  app.json  eas.json  logs.txt  package-lock.json  package.json  react-native-config.d.ts
frontend/dnd-ai/android/: settings.gradle
frontend/dnd-ai/android/app/: build.gradle  google-services.json
frontend/dnd-ai/android/app/src/main/: AndroidManifest.xml
frontend/dnd-ai/android/app/src/main/java/com/ashwinmahesh/dndai/: MainActivity.kt  MainApplication.kt
frontend/dnd-ai/android/app/src/main/res/values/: strings.xml
frontend/dnd-ai/ios/: Podfile
frontend/dnd-ai/ios/dndai/: GoogleService-Info.plist  Info.plist
frontend/dnd-ai/ios/dndai.xcodeproj/: project.pbxproj
frontend/dnd-ai/ios/dndai.xcodeproj/xcshareddata/xcschemes/: dndai.xcscheme
frontend/dnd-ai/ios/dndai.xcworkspace/: contents.xcworkspacedata
frontend/dnd-ai/src/: FirebaseConfig.ts
frontend/dnd-ai/src/api/: http.ts  inference.ts  types.ts  useFetch.ts
frontend/dnd-ai/src/app/: Login.tsx  _layout.tsx  index.tsx  loading.tsx  randomEncounters.tsx  randomNames.tsx
frontend/dnd-ai/src/app/(auth)/: _layout.tsx  login.tsx  register.tsx
frontend/dnd-ai/src/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
frontend/dnd-ai/src/app/(tabs)/(campaigns)/: [...campaignParams].tsx  _layout.tsx  addAdventurer.tsx  createCampaign.tsx  index.tsx
frontend/dnd-ai/src/app/(tabs)/(campaigns)/adventurer/: [...params].tsx  [campaignID].tsx
frontend/dnd-ai/src/app/(tabs)/(home)/: _layout.tsx  index.tsx  lootTable.tsx  randomEncounters.tsx  randomNames.tsx  rumors.tsx
frontend/dnd-ai/src/app/(tabs)/(home)/(monsters)/: _layout.tsx  generateStats.tsx  index.tsx  savedStatblocks.tsx
frontend/dnd-ai/src/app/(tabs)/(home)/monsters/: [statblockID].tsx  generateStats.tsx  savedStatblocks.tsx
frontend/dnd-ai/src/app/api/: http.ts  inference.ts  types.ts
frontend/dnd-ai/src/components/campaigns/: DynamicInputMajorEvents.tsx  SelectedCampaignDetails.tsx
frontend/dnd-ai/src/components/common/: IconButton.tsx  LoadingButton.tsx
frontend/dnd-ai/src/components/monsters/: Statblock.tsx
frontend/dnd-ai/src/components/monsters/statblockComponents/: abilities.tsx  actions.tsx  basicInfo.tsx  bonusActions.tsx  index.tsx  legendaryActions.tsx  reactions.tsx  spells.tsx  traits.tsx
frontend/dnd-ai/src/constants/: AsyncStorageKeys.ts
frontend/dnd-ai/src/database/: campaigns.ts  deleteUser.ts  statblocks.ts
frontend/dnd-ai/src/images/: images.ts  logo.tsx
frontend/dnd-ai/src/theme/: orange.ts  themes.ts
frontend/dnd-ai/src/utils/: string.ts
