load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

# platform(
#     name = "linux",
#     constraint_values = [
#         "@platforms//os:linux",
#         "@platforms//cpu:arm64",
#     ],
# )

# platform(
#     name = "macos",
#     constraint_values = [
#         "@platforms//os:macos",
#         "@platforms//cpu:arm64",
#     ],
# )