load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "dnd_ai_assistant",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
      # "@pip//:flask",
        requirement("pyyaml"),
        # requirement("mypy-extensions"),
    ],
)

py_binary(
    name = "dnd_ai_assistant_binary",
    srcs = glob(["*.py"]),
    # src = ["main.py"]
    legacy_create_init = False,
    main = "main.py",
    deps = [
        ":dnd_ai_assistant",
    ],
)

filegroup(
    name = "dnd_ai_assistant_zip",
    srcs = [":dnd_ai_assistant_binary"],
    output_group = "python_zip_file",
)
