load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "dnd_ai_assistant",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("flask"),
        "//backend/src/core",
        "//backend/src/handler",
        "//backend/src/database",
        requirement("firebase_admin"),
    ],
    data=["//backend:credentials"],
)

py_binary(
    name = "dnd_ai_assistant_binary",
    srcs = glob(["*.py"]),
    legacy_create_init = False,
    main = "main.py",
    deps = [
        ":dnd_ai_assistant",
    ]
)

filegroup(
    name = "dnd_ai_assistant_zip",
    srcs = [":dnd_ai_assistant_binary"],
    output_group = "python_zip_file",
)
