load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "database",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//backend/src/core",
        "//backend/src/utils",
        requirement("firebase_admin"),
        requirement("google-cloud-firestore"),
    ],
)